--- a/Travo.FrontEnd/src/assets/styles/boards-view.scss
+++ b/Travo.FrontEnd/src/assets/styles/boards-view.scss
@@ -43,18 +43,14 @@
         color: #FFF;
         font-size: 16px;
         font-weight: 600;
+        margin-bottom: 10px;
 
-        -webkit-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2);
-        -moz-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2);
-        box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2);
+        @include box-shadow(0px 1px 2px 0px rgba(0,0,0,0.2));
 
         &:hover {
             opacity: 1;
             cursor: pointer;
-
-            -webkit-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.4);
-            -moz-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.4);
-            box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.4);
+            @include box-shadow(0px 1px 2px 0px rgba(0,0,0,0.4));
         }
     }
 
